2007-08-30  Raphaël Quinet  <raphael@gimp.org>

	* data/tips/gimp-tips.xml.in: expanded old tip and mentioned that
	it is possible to configure most window managers so that they do
	not steal the Alt key from the applications.  Fixes bug #471565.

2007-08-30  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/pcx.c: applied modified patch from Nils
	Philippsen that adds more sanity checks when loading and saving
	images.  Fixes the reopened bug #471189.

2007-08-30  Michael Natterer  <mitch@gimp.org>

	First version of global menubar support for OSX. Work in progress.

	* app/gui/Makefile.am
	* app/gui/sync-menu.[ch]: new files containing code that takes
	a GtkMenuShell and proxies it in the OSX global menubar. Taken
	from http://developer.imendio.com/projects/gtk-macosx/menubar

	* app/gui/gui.c: put the global image popup menu to the menubar.

	* app/dialogs/preferences-dialog.c
	* app/display/gimpdisplayshell.c
	* app/widgets/gimptoolbox.c: #ifdef out all menubars in windows.

	* app/Makefile.am (AM_LDFLAGS): add $(CARBON_LDFLAGS)

2007-08-30  Jakub Friedl  <jfriedl@suse.cz>

	* plug-ins/common/scatter_hsv.c: Randomizing hue of desaturated
	pixels before increasing saturation. Fixes #471476.

2007-08-29  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c: Applied change suggested
	in SourceForge bug #1593861 which stops integer? from thinking that
	non-numbers are integers.

2007-08-30  Simon Budig  <simon@gimp.org>

	* plug-ins/script-fu/tinyscheme/scheme.[ch]
	* plug-ins/script-fu/tinyscheme/scheme-private.h: small changes
	to tinyscheme - mostly removing workarounds for message output.

	* plug-ins/script-fu/scheme-wrapper.[ch]: try to channel the
	output through a central function, have various output functions
	to handle the messages. Remove some hacks.

	* plug-ins/script-fu/script-fu-text-console.c
	* plug-ins/script-fu/script-fu-scripts.[ch]
	* plug-ins/script-fu/script-fu-interface.c
	* plug-ins/script-fu/script-fu.c